--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "autoprefixer": "^10.4.20",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.0.11",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "papaparse": "^5.5.2",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
+    "react-chart.js": "^1.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.28.2",
     "react-scripts": "^5.0.1",
